# financial_ai

./: crew.yaml  pyproject.toml
src/templates/: crew.py
src/tools/: crew_agent_analyzer.py  crew_agent_loader.py  crew_agent_reporter.py
src/utils/: analyzer.py  data_loader.py  reporter.py
